adding fetch button to the popup

--- a/background.html
+++ b/background.html
@@ -1,10 +1,15 @@
-<!doctype html>
-<script type="text/javascript" src="fancy-settings/source/lib/store.js"></script>
-<script type="text/javascript" src="scripts/background.js"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- 
-Place HTML content here if you need it, or include more JS 
-This is a background page and as such, it persists across the lifetime of
-the extension, as opposted to event pages:
-http://developer.chrome.com/extensions/event_pages.html
--->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trello++ background</title>
+</head>
+
+<body>
+  <script type="text/javascript" src="background.js"></script>
+  <script type="text/javascript" src="lib/jquery.js"></script>
+</body>
+
+</html>
