--- a/options/options.html
+++ b/options/options.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TreDev settings page</title>
+  <title>Trello++ settings page</title>
 	<link rel="stylesheet" href="options.css">
 </head>
 
@@ -18,7 +18,6 @@
     <a href="#" id="deauthorize-button">Log out</a><br />
   </div>
   <script src="../lib/jquery.js"></script>
-  <script src="../scripts/key.js"></script>
   <script src="options.js"></script>
   <script src="https://api.trello.com/1/client.js?key=23ae2ad25ad0c4a9e5459765ca6f3333"></script>
   <script src="../lib/hashSearch.js"></script>
