adding vue.js/vuetify

--- a/background.html
+++ b/background.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trello++ background</title>
+  <title>Trello++ Background</title>
 </head>
 
 <body>
-  <script type="text/javascript" src="background.js"></script>
-  <script type="text/javascript" src="lib/jquery.js"></script>
+  <script src="background.js"></script>
+  <script src="lib/jquery.js"></script>
 </body>
 
 </html>
