--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,38 +13,51 @@
 <body>
   <div id="trelloplusplus">
     <v-app>
-      <v-system-bar window >
+      <v-system-bar class="d-flex justify-space-between" style="position: sticky;
+      top: 0px;
+      z-index: 4;">
         <span class="body-1">Trello++</span>
-        <v-spacer></v-spacer>
-        <a href="/options/options.html" target="_blank" class="d-flex flex-row">
-          <v-icon>mdi-account-outline</v-icon>
+        <v-progress-circular :indeterminate="fetching" size="19" @click="fetch" style="right: 5vw;"></v-progress-circular>
+        <a href="/options/options.html" target="_blank">
+          <v-icon size='24' color="#757575" class="mr-0">mdi-account-outline</v-icon>
         </a>
-        <v-icon @click="fetch">mdi-refresh</v-icon>
       </v-system-bar>
       <v-content>
         <v-container>
           <v-select v-model="selectedBoard" @change="filterByBoardId(selectedBoard)" :items="boards"
             label="Choose a board" item-text="name" item-value="id">
           </v-select>
-          <v-chip-group v-model="selectedList" mandatory show-arrows active-class="primary--text" next-icon="mdi-drag-vertical" prev-icon="mdi-drag-vertical" @change="filterByListId(selectedList)">
-            <v-chip v-for="list in lists" :key="list.id" :value="list.id" label small>
+          <v-chip-group v-model="selectedList" mandatory show-arrows active-class="primary--text"
+            next-icon="mdi-drag-vertical" prev-icon="mdi-drag-vertical" @change="filterByListId(selectedList)">
+            <v-chip v-for="list in filtredLists" :key="list.id" :value="list.id" label small>
               {{ list.name }}
             </v-chip>
           </v-chip-group>
           <v-expansion-panels class="mt-2">
-            <v-expansion-panel v-for="card in filtredCards" :key="card.id" >
+            <v-expansion-panel v-for="card in filtredCards" :key="card.id">
               <v-expansion-panel-header hide-actions>
-                {{card.name}}
+                #{{card.idShort}} - {{card.name}}
               </v-expansion-panel-header>
               <v-expansion-panel-content>
                 {{card.desc}}
+                <!-- <v-chip-group  mandatory show-arrows active-class="primary--text"
+                  next-icon="mdi-drag-vertical" prev-icon="mdi-drag-vertical" @change="">
+                  <v-chip v-for="list in lists" :key="list.id" :value="list.id" label small>
+                    {{ list.name }}
+                  </v-chip>
+                </v-chip-group> -->
+                <v-col cols="6" class="px-0">
+                  <v-select v-model="destinationList" @change="move(card.id, destinationList)" :items="destinationLists"
+                    label="Move to" item-text="name" item-value="id">
+                  </v-select>
+                </v-col>
               </v-expansion-panel-content>
               <v-card-actions class="d-flex">
-                <v-btn small text @click="move(card)">Code Reveiw</v-btn>
+                <v-btn small text >Code Reveiw</v-btn>
                 <v-btn small text>Blocked</v-btn>
                 <div class="ml-auto mr-2">
                   <a :href="card.shortUrl" target="_blank">
-                    <v-icon small @click="copie(card)">mdi-open-in-new</v-icon>
+                    <v-icon small>mdi-open-in-new</v-icon>
                   </a>
                   <v-icon small @click="copie(card)">mdi-content-copy</v-icon>
                 </div>
@@ -52,6 +65,15 @@
 
             </v-expansion-panel>
           </v-expansion-panels>
+          <v-bottom-sheet v-model="undoing" inset>
+            </template>
+            <v-sheet class="text-center" height="75px">
+              <v-icon
+                class="mt-6"
+                @click="undo"
+              >mdi-undo-variant</v-icon>
+            </v-sheet>
+          </v-bottom-sheet>
         </v-container>
       </v-content>
     </v-app>
