--- a/background.html
+++ b/background.html
@@ -9,7 +9,7 @@
 
 <body>
   <script src="background.js"></script>
-  <script src="lib/jquery.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 </body>
 
 </html>
